--- a/Pages/Page 3/forthPage.css
+++ b/Pages/Page 3/forthPage.css
@@ -1,9 +1,9 @@
 body {
-	height: 100vh;
+    height: 100vh;
     overflow: hidden;
 }
 
-h1{  
+h1 {
     margin: 5rem 0 0;
     padding-bottom: 0;
     display: flex;
@@ -12,8 +12,8 @@ h1{
     color: #111;
 }
 
-img{
-    margin-top:0;
+img {
+    margin-top: 0;
     height: 400px;
     position: absolute;
     top: 50%;
@@ -25,54 +25,78 @@ img{
     font-size: 35px;
     display: flex;
     justify-content: center;
-    margin-top: 29rem;
-    padding-top: 2rem;
-    gap: 12rem;
+    position: relative;
+    z-index: 10;
+    margin-top: 25rem;
+    gap: 8rem;
 }
 
-.romantic1{
+.buttons button {
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
+    border-radius: 15px;
+    border: none;
+    background-color: #ff4d4d;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.2s, background-color 0.2s;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.buttons button:hover {
+    transform: scale(1.1);
+    background-color: #ff3333;
+}
+
+.romantic1 {
     margin: 0;
     position: absolute;
     top: 5%;
     left: 85%;
     transform: translate(-50%, -50%);
 }
-.romantic2{
+
+.romantic2 {
     margin: 0;
     position: absolute;
     top: 15%;
     left: 15%;
     transform: translate(-50%, -50%);
 }
-.romantic3{
+
+.romantic3 {
     margin: 0;
     position: absolute;
     top: 35%;
     left: 71%;
     transform: translate(-50%, -50%);
 }
-.romantic4{
+
+.romantic4 {
     margin: 0;
     position: absolute;
     top: 45%;
     left: 25%;
     transform: translate(-50%, -50%);
 }
-.romantic5{
+
+.romantic5 {
     margin: 0;
     position: absolute;
     top: 79%;
     left: 79%;
     transform: translate(-50%, -50%);
 }
-.romantic6{
+
+.romantic6 {
     margin: 0;
     position: absolute;
     top: 75%;
     left: 10%;
     transform: translate(-50%, -50%);
 }
-.romantic7{
+
+.romantic7 {
     margin: 0;
     position: absolute;
     top: 95%;
@@ -88,7 +112,7 @@ img{
     left: 47%;
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
 }
