--- a/Pages/Page 6/no1.css
+++ b/Pages/Page 6/no1.css
@@ -36,9 +36,11 @@ body {
     transform: translateY(-100vh) skew(-5deg);
     opacity: 1;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     transform: translateY(0) skew(5deg);
     opacity: 0;
@@ -73,8 +75,10 @@ h1 {
 .buttons {
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 10;
   margin-top: 7rem;
-  gap: 12rem; 
+  gap: 12rem;
 }
 
 #yes {
