--- a/Pages/Page 8/no3.css
+++ b/Pages/Page 8/no3.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,38 +6,40 @@
 
 body {
     background: #110515;
-	height: 100vh;
+    height: 100vh;
     overflow: hidden;
     /* background-image: url('\\Assets\\wall2.jpg');
     background-size: cover; */
 }
 
-.circle{
+.circle {
     position: absolute;
     bottom: 0;
     width: 20px;
     aspect-ratio: 1/1;
     background: rgb(249, 206, 247);
-    box-shadow: 0 0 10px rgb(230, 0, 255), 0 0 20px rgb(218, 27, 221),0 0 30px rgb(216, 34, 244),0 0 40px rgb(209, 110, 228),0 0 50px;
+    box-shadow: 0 0 10px rgb(230, 0, 255), 0 0 20px rgb(218, 27, 221), 0 0 30px rgb(216, 34, 244), 0 0 40px rgb(209, 110, 228), 0 0 50px;
     border-radius: 30%;
     animation: animate 5s linear forwards;
 }
 
-@keyframes animate{
-    0%{
+@keyframes animate {
+    0% {
         transform: translateY(0) rotate(-25deg);
         opacity: 1;
     }
-    50%{
+
+    50% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         transform: translateY(-100vh) rotate(25deg);
         opacity: 0;
     }
 }
 
-.circle::before{
+.circle::before {
     content: '';
     position: absolute;
     top: 100%;
@@ -47,7 +49,7 @@ body {
     opacity: 0.5;
 }
 
-h1{  
+h1 {
     margin: 5rem 0 0;
     padding-bottom: 0;
     display: flex;
@@ -56,14 +58,14 @@ h1{
     color: whitesmoke;
 }
 
-.red{
+.red {
     color: red;
     font-size: 3rem;
     font-family: cursive;
 }
 
-img{
-    margin-top:0;
+img {
+    margin-top: 0;
     padding-top: 1rem;
     height: 500px;
     position: absolute;
@@ -76,15 +78,14 @@ img{
 .buttons {
     display: flex;
     justify-content: center;
-    margin-top: 29rem;
-    padding-top: 2rem;
+    position: relative;
+    z-index: 1000;
+    margin-top: 25rem;
     gap: 12rem;
 }
 
-.btn{
+.btn {
     display: inline-block;
-    position: relative;
-    top: calc(100% - 10rem);
     min-width: 120px;
     margin: 4px 2px;
     font-size: 1.25rem;
@@ -99,20 +100,20 @@ img{
     z-index: 1000;
 }
 
-#yes{
+#yes {
     background-color: rgb(237, 16, 64);
 }
 
 #no:hover span {
-    display:none
+    display: none
 }
 
 #no:hover:before {
-    content:"Uff, You Girls 😑";
+    content: "Uff, You Girls 😑";
 }
 
 body.noo {
-    background-image: linear-gradient(0.25turn, #100716, #0e031f, #031d17,#250212, #181802);
+    background-image: linear-gradient(0.25turn, #100716, #0e031f, #031d17, #250212, #181802);
 }
 
 .watermark {
@@ -123,7 +124,7 @@ body.noo {
     left: 47%;
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(243, 214, 214);
 }
