--- a/Pages/Page 3/forthPage.css
+++ b/Pages/Page 3/forthPage.css
@@ -1,15 +1,20 @@
 body {
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    background-color: white;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
-    margin: 5rem 0 0;
-    padding-bottom: 0;
+    margin: 0;
+    padding-top: 5rem;
     display: flex;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #111;
+    font-size: 3rem;
+    position: relative;
+    z-index: 100;
 }
 
 img {
@@ -108,8 +113,11 @@ img {
     opacity: 0.5;
     color: BLACK;
     position: fixed;
-    top: 97%;
-    left: 47%;
+    bottom: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 100%;
 }
 
 a {
